src/css/modal-window.css
/*-----------------Mobile-MODAL-WINDOW---------------------------*/

.modal-film-window {
  position: absolute;
  top: 50%;
  left: 50%;
  font-family: 'Roboto-Medium', sans-serif;
  font-size: 14px;
  line-height: calc(16 / 14);

  padding: 52px 16px;
  width: 280px;

  background-color: var(--black);
  border-radius: 14px;
  transform: translate(-50%, -50%) scale(1);
  box-shadow: 1px 1px 14px 4px rgba(255, 107, 8, 0.42);
  /* opacity: 1; */
  max-height: 99vh;
  overflow-y: auto;
}

.light .modal-film-window {
  background-color: var(--white);
  box-shadow: none;
}

.modal-close-btn {
  display: block;
  position: absolute;
  top: 27px;
  right: 22px;
  width: 20px;
  height: 20px;

  background-color: transparent;
  border: none;
  cursor: pointer;
}


.modal-close-icon {
  width: 20px;
  height: 20px;
  stroke: var(--white);
}

.light .modal-close-icon {
  stroke: var(--black);
}


.modal-close-icon:hover,
.modal-close-icon:focus {
  stroke: var(--orange);
}

.light .modal-close-icon:hover,
.light .modal-close-icon:focus {
  stroke: var(--orange);
}

.film-tittle {
  font-weight: 500;
  font-size: 20px;
  line-height: calc(23 / 20);

  margin-top: 22px;
  text-align: center;
  color: var(--white);
}

.light .film-tittle {
  color: var(--black);
}

.film-list-wrapper {
  display: flex;
  gap: 42px;
  margin-top: 29px;
}

.about-film-item {
  color:var( --light-gray);
}

.about-film-item:not(:first-child) {
  margin-top: 12px;
}

.second-about-film-list>.about-film-item {
  color: var(--white);
  width: 120px;
}

.light .second-about-film-list>.about-film-item {
  color: var(--black);
}

.about-film-item:first-child>.vote-span {
  padding: 1px 7px;
  background-color: var(--white);
  border-radius: 5px;
  color: var(--black);
}

.light .about-film-item:first-child>.vote-span {
  background-color: var(--orange);
}

.about-film-tittle {
  margin-top: 20px;
  color:var( --light-gray);
  text-transform: uppercase;
}

.light .about-film-tittle {
  color: var(--black);
}

.about-film-story {
  font-family: 'Roboto-Regular', sans-serif;
  font-size: 12px;
  line-height: calc(20 / 12);

  margin-top: 12px;
  color: var(--white-smoke);
  width: 248px;
  height: 160px;
   overflow: auto; 
}

.light .about-film-story {
  color: var(--black);
}

.add-film-btn {
  margin-top: 16px;
  font-size: 12px;
  line-height: calc(14/12);
}


.light .add-film-btn {
   background: linear-gradient(var(--white), var(--white)) padding-box,
  linear-gradient(to right, #ffc226 100%, var(--orange) 100%) border-box; 
   color: var(--black); 

}

.light .add-film-btn:hover,
.light .add-film-btn:hover {
   background: linear-gradient(var(--black), var(--black)) padding-box,
    linear-gradient(to right, #ffc226 100%, var(--orange) 100%) border-box; 
}

.film-poster-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 248px;
  max-height: 315px;
   /* overflow: hidden;  */
}

.film-poster-img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.picture-class {
  background-size: contain;
  margin-left: -40px;
}

.film-poster-img[alt] {
  color: var(--white)
}

.light .film-poster-img[alt] {
  color: var(--black)
}


/* @media screen and (max-width: 767px) {
  .modal-film-window {
    overflow-y: auto;
  }

  .about-film-story {
    overflow-y: auto;
  }
} */

/*-------------------------------Tablet-----------------------------*/

@media screen and (min-width: 768px) {
  .modal-film-window {
    justify-content: center;
    width: 704px;
    /* min-height: 488px; */
    height: 488px;
    /* overflow-y: hidden; */
  }

  .modal-film-window {
    display: flex;
    gap: 16px;
    padding: 44px;
  }

  .modal-close-btn {
    top: 29px;
    right: 29px;
  }

  .film-tittle {
    margin-top: 0;
    text-align: start;
  }

  .about-film-tittle {
    font-size: 24px;
    line-height: calc(28 / 24);
  }

  .film-list-wrapper {
    margin-top: 26px;
  }

  .second-about-film-list>.about-film-item {
    width: 180px;
  }

  .about-film-story {
    font-size: 14px;
    line-height: calc(20 / 14);

    min-width: 301px;
    height: 100px;
    margin-top: 16px;
    overflow-y: auto;
  }

  .film-poster-wrapper {
    max-width: 294px;
    max-height: 400px;
  }
  .picture-class {
    margin-top: -70px;
  }

  .add-film-btn {
    margin-top: 24px;
    line-height: calc(16/12);
  }
}

/*------------------------DESKTOP-------------------------------*/

@media screen and (min-width: 1280px) {
  .modal-film-window {
    width: 846px;
    height: 598px;
    padding: 60px;
  }

  .modal-close-btn {
    top: 45px;
    right: 45px;
    margin-bottom: 3px;
  }

  .film-tittle {
    font-size: 24px;
    line-height: calc(32 / 24);
  }

  .about-film-story {
    width: 331px;
    height: 140px;
  }

  .film-poster-wrapper {
    max-width: 375px;
    max-height: 478px;
  }
}

